--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,14 @@
 <html>
 <head>
   <title>Syrat</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag 'estilo.css' %>
+  <%= stylesheet_link_tag 'estilo2.css' %>
+  <%= stylesheet_link_tag 'datepicker.css' %>
+
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="brBack">
 
 	<div id="user_nav">
 		<% if current_user %>
