Reporte Formulario CSS
Cambio al _form.html.rb para que sea igual al de la plantilla estilo

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -11,128 +11,128 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :nombreAjustador %><br>
+  				<div class="col-xs-2">
+					<label style="padding-left: 2px;">Nombre del Ajustador</label>
     <%= f.text_field :nombreAjustador %>
   </div>
-  <div class="field">
-    <%= f.label :numeroPoliza %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">No. Poliza</label>
     <%= f.text_field :numeroPoliza %>
   </div>
-  <div class="field">
-    <%= f.label :fechaExpedicion %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Fecha de Expedicion</label>
     <%= f.date_select :fechaExpedicion %>
   </div>
-  <div class="field">
-    <%= f.label :nombreAsegurado %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Nombre del Asegurado</label>
     <%= f.text_field :nombreAsegurado %>
   </div>
-  <div class="field">
-    <%= f.label :telefonoAsegurado %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Telefono del Asegurado</label>
     <%= f.text_field :telefonoAsegurado %>
   </div>
-  <div class="field">
-    <%= f.label :estatusCobranza %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Estatus de la Cobranza</label>
     <%= f.check_box :estatusCobranza %>
   </div>
-  <div class="field">
-    <%= f.label :equipoAmparado %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Equipo Especial Amparado</label>
     <%= f.check_box :equipoAmparado %>
   </div>
-  <div class="field">
-    <%= f.label :comentarioEquipoAmparado %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Comentario Equipo Especial Amparado</label>
     <%= f.text_area :comentarioEquipoAmparado %>
   </div>
-  <div class="field">
-    <%= f.label :numeroSiniestro %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">No. del Siniestro</label>
     <%= f.text_field :numeroSiniestro %>
   </div>
-  <div class="field">
-    <%= f.label :numeroInciso %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">No. de Inciso</label>
     <%= f.text_field :numeroInciso %>
   </div>
-  <div class="field">
-    <%= f.label :fechaSiniestro %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Fecha del Siniestro</label>
     <%= f.date_select :fechaSiniestro %>
   </div>
-  <div class="field">
-    <%= f.label :terceroAsegurado %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Tercero Asegurado</label>
     <%= f.check_box :terceroAsegurado %>
   </div>
-  <div class="field">
-    <%= f.label :condicionesEspeciales %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Condiciones Especiales</label>
     <%= f.text_area :condicionesEspeciales %>
   </div>
-  <div class="field">
-    <%= f.label :nombreTercero %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Nombre del Tercero</label>
     <%= f.text_field :nombreTercero %>
   </div>
-  <div class="field">
-    <%= f.label :inventario %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Inventario</label>
     <%= f.text_area :inventario %>
   </div>
-  <div class="field">
-    <%= f.label :numeroEconomico %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Numero Economico</label>
     <%= f.text_field :numeroEconomico %>
   </div>
-  <div class="field">
-    <%= f.label :siniestro %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Siniestro</label>
     <%= f.text_area :siniestro %>
   </div>
-  <div class="field">
-    <%= f.label :grua %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Grua</label>
     <%= f.check_box :grua %>
   </div>
-  <div class="field">
-    <%= f.label :valorComercial %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Valor Comercial</label>
     <%= f.text_field :valorComercial %>
   </div>
-  <div class="field">
-    <%= f.label :sigueAuto %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Sigue con Auto</label>
     <%= f.check_box :sigueAuto %>
   </div>
-  <div class="field">
-    <%= f.label :deducible %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Deducible</label>
     <%= f.check_box :deducible %>
   </div>
-  <div class="field">
-    <%= f.label :deducibleValor %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Valor del Deducible</label>
     <%= f.text_field :deducibleValor %>
   </div>
-  <div class="field">
-    <%= f.label :aseguradoTercero %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Tercero Asegurado</label>
     <%= f.text_field :aseguradoTercero %>
   </div>
-  <div class="field">
-    <%= f.label :marca %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Marca</label>
     <%= f.text_field :marca %>
   </div>
-  <div class="field">
-    <%= f.label :tipo %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Tipo</label>
     <%= f.text_field :tipo %>
   </div>
-  <div class="field">
-    <%= f.label :modelo %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Modelo</label>
     <%= f.text_field :modelo %>
   </div>
-  <div class="field">
-    <%= f.label :numeroPuertas %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">No. Puertas</label>
     <%= f.number_field :numeroPuertas %>
   </div>
-  <div class="field">
-    <%= f.label :color %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Color</label>
     <%= f.text_field :color %>
   </div>
-  <div class="field">
-    <%= f.label :numeroSerie %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">No. Serie</label>
     <%= f.text_field :numeroSerie %>
   </div>
-  <div class="field">
-    <%= f.label :numeroMotor %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">No. Motor</label>
     <%= f.text_field :numeroMotor %>
   </div>
-  <div class="field">
-    <%= f.label :placas %><br>
+  				<div class="col-xs-2">
+<label style="padding-left: 2px;">Placas</label>
     <%= f.text_field :placas %>
   </div>
   <div class="actions">
