--- a/app/views/reportes/_form.html.erb
+++ b/app/views/reportes/_form.html.erb
@@ -1,138 +1,137 @@
-<%= form_for(@report) do |f| %>
-  <% if @report.errors.any? %>
+<%= form_for(@reporte) do |f| %>
+  <% if @reporte.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@report.errors.count, "error") %> prohibited this report from being saved:</h2>
+      <h2><%= pluralize(@reporte.errors.count, "error") %> prohibited this reporte from being saved:</h2>
 
       <ul>
-      <% @report.errors.full_messages.each do |msg| %>
+      <% @reporte.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
-  				<div class="field">
+  <div class="field">
     <%= f.label :nombreAjustador %><br>
-
     <%= f.text_field :nombreAjustador %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :numeroPoliza %><br>
     <%= f.text_field :numeroPoliza %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :fechaExpedicion %><br>
     <%= f.date_select :fechaExpedicion %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :nombreAsegurado %><br>
     <%= f.text_field :nombreAsegurado %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :telefonoAsegurado %><br>
     <%= f.text_field :telefonoAsegurado %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :estatusCobranza %><br>
     <%= f.check_box :estatusCobranza %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :equipoAmparado %><br>
     <%= f.check_box :equipoAmparado %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :comentarioEquipoAmparado %><br>
     <%= f.text_area :comentarioEquipoAmparado %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :numeroSiniestro %><br>
     <%= f.text_field :numeroSiniestro %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :numeroInciso %><br>
     <%= f.text_field :numeroInciso %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :fechaSiniestro %><br>
     <%= f.date_select :fechaSiniestro %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :terceroAsegurado %><br>
     <%= f.check_box :terceroAsegurado %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :condicionesEspeciales %><br>
     <%= f.text_area :condicionesEspeciales %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :nombreTercero %><br>
     <%= f.text_field :nombreTercero %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :inventario %><br>
     <%= f.text_area :inventario %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :numeroEconomico %><br>
     <%= f.text_field :numeroEconomico %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :siniestro %><br>
     <%= f.text_area :siniestro %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :grua %><br>
     <%= f.check_box :grua %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :valorComercial %><br>
     <%= f.text_field :valorComercial %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :sigueAuto %><br>
     <%= f.check_box :sigueAuto %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :deducible %><br>
     <%= f.check_box :deducible %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :deducibleValor %><br>
     <%= f.text_field :deducibleValor %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :aseguradoTercero %><br>
     <%= f.text_field :aseguradoTercero %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :marca %><br>
     <%= f.text_field :marca %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :tipo %><br>
     <%= f.text_field :tipo %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :modelo %><br>
     <%= f.text_field :modelo %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :numeroPuertas %><br>
     <%= f.number_field :numeroPuertas %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :color %><br>
     <%= f.text_field :color %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :numeroSerie %><br>
     <%= f.text_field :numeroSerie %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :numeroMotor %><br>
     <%= f.text_field :numeroMotor %>
   </div>
-  				<div class="col-xs-2">
+  <div class="field">
     <%= f.label :placas %><br>
     <%= f.text_field :placas %>
   </div>
