--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -2,158 +2,158 @@
 
 <p>
   <strong>Nombreajustador:</strong>
-  <%= @reporte.nombreAjustador %>
+  <%= @report.nombreAjustador %>
 </p>
 
 <p>
   <strong>Numeropoliza:</strong>
-  <%= @reporte.numeroPoliza %>
+  <%= @report.numeroPoliza %>
 </p>
 
 <p>
   <strong>Fechaexpedicion:</strong>
-  <%= @reporte.fechaExpedicion %>
+  <%= @report.fechaExpedicion %>
 </p>
 
 <p>
   <strong>Nombreasegurado:</strong>
-  <%= @reporte.nombreAsegurado %>
+  <%= @report.nombreAsegurado %>
 </p>
 
 <p>
   <strong>Telefonoasegurado:</strong>
-  <%= @reporte.telefonoAsegurado %>
+  <%= @report.telefonoAsegurado %>
 </p>
 
 <p>
   <strong>Estatuscobranza:</strong>
-  <%= @reporte.estatusCobranza %>
+  <%= @report.estatusCobranza %>
 </p>
 
 <p>
   <strong>Equipoamparado:</strong>
-  <%= @reporte.equipoAmparado %>
+  <%= @report.equipoAmparado %>
 </p>
 
 <p>
   <strong>Comentarioequipoamparado:</strong>
-  <%= @reporte.comentarioEquipoAmparado %>
+  <%= @report.comentarioEquipoAmparado %>
 </p>
 
 <p>
   <strong>Numerosiniestro:</strong>
-  <%= @reporte.numeroSiniestro %>
+  <%= @report.numeroSiniestro %>
 </p>
 
 <p>
   <strong>Numeroinciso:</strong>
-  <%= @reporte.numeroInciso %>
+  <%= @report.numeroInciso %>
 </p>
 
 <p>
   <strong>Fechasiniestro:</strong>
-  <%= @reporte.fechaSiniestro %>
+  <%= @report.fechaSiniestro %>
 </p>
 
 <p>
   <strong>Terceroasegurado:</strong>
-  <%= @reporte.terceroAsegurado %>
+  <%= @report.terceroAsegurado %>
 </p>
 
 <p>
   <strong>Condicionesespeciales:</strong>
-  <%= @reporte.condicionesEspeciales %>
+  <%= @report.condicionesEspeciales %>
 </p>
 
 <p>
   <strong>Nombretercero:</strong>
-  <%= @reporte.nombreTercero %>
+  <%= @report.nombreTercero %>
 </p>
 
 <p>
   <strong>Inventario:</strong>
-  <%= @reporte.inventario %>
+  <%= @report.inventario %>
 </p>
 
 <p>
   <strong>Numeroeconomico:</strong>
-  <%= @reporte.numeroEconomico %>
+  <%= @report.numeroEconomico %>
 </p>
 
 <p>
   <strong>Siniestro:</strong>
-  <%= @reporte.siniestro %>
+  <%= @report.siniestro %>
 </p>
 
 <p>
   <strong>Grua:</strong>
-  <%= @reporte.grua %>
+  <%= @report.grua %>
 </p>
 
 <p>
   <strong>Valorcomercial:</strong>
-  <%= @reporte.valorComercial %>
+  <%= @report.valorComercial %>
 </p>
 
 <p>
   <strong>Sigueauto:</strong>
-  <%= @reporte.sigueAuto %>
+  <%= @report.sigueAuto %>
 </p>
 
 <p>
   <strong>Deducible:</strong>
-  <%= @reporte.deducible %>
+  <%= @report.deducible %>
 </p>
 
 <p>
   <strong>Deduciblevalor:</strong>
-  <%= @reporte.deducibleValor %>
+  <%= @report.deducibleValor %>
 </p>
 
 <p>
   <strong>Aseguradotercero:</strong>
-  <%= @reporte.aseguradoTercero %>
+  <%= @report.aseguradoTercero %>
 </p>
 
 <p>
   <strong>Marca:</strong>
-  <%= @reporte.marca %>
+  <%= @report.marca %>
 </p>
 
 <p>
   <strong>Tipo:</strong>
-  <%= @reporte.tipo %>
+  <%= @report.tipo %>
 </p>
 
 <p>
   <strong>Modelo:</strong>
-  <%= @reporte.modelo %>
+  <%= @report.modelo %>
 </p>
 
 <p>
   <strong>Numeropuertas:</strong>
-  <%= @reporte.numeroPuertas %>
+  <%= @report.numeroPuertas %>
 </p>
 
 <p>
   <strong>Color:</strong>
-  <%= @reporte.color %>
+  <%= @report.color %>
 </p>
 
 <p>
   <strong>Numeroserie:</strong>
-  <%= @reporte.numeroSerie %>
+  <%= @report.numeroSerie %>
 </p>
 
 <p>
   <strong>Numeromotor:</strong>
-  <%= @reporte.numeroMotor %>
+  <%= @report.numeroMotor %>
 </p>
 
 <p>
   <strong>Placas:</strong>
-  <%= @reporte.placas %>
+  <%= @report.placas %>
 </p>
 
-<%= link_to 'Edit', edit_reporte_path(@reporte) %> |
-<%= link_to 'Back', reportes_path %>
+<%= link_to 'Edit', edit_report_path(@report) %> |
+<%= link_to 'Back', reports_path %>
