--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag 'estilo.css' %>
   <%= stylesheet_link_tag 'estilo2.css' %>
   <%= stylesheet_link_tag 'datepicker.css' %>
+  <%= stylesheet_link_tag 'bootstrap.min.css' %>
 
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -26,6 +27,11 @@
 <% end %>
 
 <%= yield %>
+
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="/assets/bootstrap.min.js"></script>
+<script src="/assets/bootstrap-datepicker.js"></script>
+<script src="/assets/fecha.js"></script> -->
 
 </body>
 </html>
