--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,9 +1,4 @@
-<div class="container sourcesans" >
-  <div class="row bprinc" style="height:100px">
-    <div class= "col-xs-4 col-sm-4 col-md-3" ><img src="/assets/imgLogos-03.svg" style="padding-top:10px; margin-left:20px" alt="Syrat" class="img-responsive"></div>
-    <div class= "col-xs-2 col-sm-1 col-md-1  col-xs-offset-6 col-sm-offset-6 col-md-offset-7"><img src="/assets/imgSLogo.svg" style="margin-top:20px; margin-bottom:10px; margin-right:50px" alt="IMEX" class="img-responsive"></div>
-  </div>
-<%= form_for @report, :html => {:class => 'form textUppercase'} do |f|  %>
+<%= form_for(@report) do |f| %>
   <% if @report.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@report.errors.count, "error") %> prohibited this report from being saved:</h2>
@@ -15,138 +10,148 @@
       </ul>
     </div>
   <% end %>
-<div class="row grsec form-group" >
 
-  <h1 class="blueTitle" >INFORMACIÓN PRIMARIA DEL SINIESTRO</h1>
-<!-- PONER CORREO  -->
-<!-- Fecha de expedicion de documento (?) -->
-  <div class="col-xs-2">
-    <%= f.text_field :numeroSiniestro, :class => 'formStyle' %>
-    <label style="padding-left: 2px;">No. de siniestro</label>
+  <div class="field">
+    <%= f.label :companiaSeguros %><br>
+    <%= f.text_field :companiaSeguros %>
   </div>
-
-    <div class="col-xs-3">
-      <%= f.text_field :numeroPoliza, :class => 'formStyle'  %>
-      <label style="padding-left: 2px;">no. de póliza</label>
-    </div>
-
-    <div class="col-xs-3">
-      <%= f.text_field :numeroInciso, :class => 'formStyle'  %>
-      <label style="padding-left: 2px;">no. de inciso</label>
-    </div>
-
-    <div class="col-xs-2">
-      <%= f.text_field :fechaSiniestro, :class => 'formStyle datepicker'  %>
-      <label style="padding-left: 2px;">fecha de siniestro</label>
-    </div>
-
-    <div class="col-xs-5">
-      <%= f.text_field :nombreAsegurado, :class => 'formStyle'  %>
-      <label style="padding-left: 2px;">nombre del asegurado</label>
-    </div>
-
-    <div class="col-xs-3">
-        <%= f.text_field :telefonoAsegurado, :class => 'formStyle'  %>
-        <label style="padding-left: 2px;">teléfono</label>
-    </div>
-    <div class="col-xs-2">
-        <%= f.text_field :deducible, :class => 'formStyle '  %>
-        <label style="padding-left: 2px;">deducible</label>
-    </div>
-    <div class="col-xs-2">
-      <%= f.text_field :valorComercial, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">valor comercial</label>
-    </div>
-    <div class="col-xs-2">
-      <%= f.text_field :estatusCobranza, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">estatus cobranza</label>
-    </div>
-    <div class="col-xs-2">
-      <%= f.text_field :valorComercial, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">valor comercial</label>
-    </div>
-    <div class="col-xs-4">
-      <%= f.text_field :nombreAjustador, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Nombre del Ajustador</label>
-    </div>
-</div> <!-- ./ div row grsec-->
-
-
-
-
-<div class="row form-group" > <h3 class="blueTitle centerText masInfoHeight" >MÁS INFORMACIÓN</h3></div>
-
-  <div class="row grsec form-group"> <h1 class="col-xs-12 blueTitle" >INFORMACIÓN VEHÍCULO ASEGURADO</h1>
-
-    <div class="col-xs-2">
-      <%= f.text_field :marca, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Marca</label>
-    </div>
-    <div class="col-xs-2">
-      <%= f.text_field :modelo, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Modelo</label>
-    </div>
-    <div class="col-xs-2">
-      <%= f.text_field :tipo, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Tipo</label>
-    </div>
-    <div class="col-xs-1">
-      <%= f.number_field :numeroPuertas, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Puertas</label>
-    </div>
-    <div class="col-xs-2">
-      <%= f.text_field :color, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Color</label>
-    </div>
-    <div class="col-xs-2">
-      <%= f.text_field :placas, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Placas</label>
-    </div>
-    <div class="col-xs-2">
-      <%= f.text_field :numeroSerie, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Número de Serie</label>
-    </div>
-    <div class="col-xs-2">
-      <%= f.text_field :numeroMotor, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Número de Motor</label>
-    </div>
-
-
-
-  </div><!-- ./info vehiculo asegurado -->
-
-  <div class="row grsec form-group" > <h1 class="blueTitle" >INFORMACIÓN SECUNDARIA DEL SINIESTRO	</h1>
-    <div class="col-xs-3">
-      <%= f.text_field :equipoAmparado, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Equipo Amparado</label>
-    </div>
-    <div class="col-xs-3">
-      <%= f.text_area :comentarioEquipoAmparado, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Comentario</label>
-    </div>
-    <div class="col-xs-3">
-      <%= f.text_area :condicionesEspeciales, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Condiciones especiales</label>
-    </div>
-    <div class="col-xs-3">
-      <%= f.text_area :inventario, :class => 'formStyle '  %>
-      <label style="padding-left: 2px;">Inventario</label>
-    </div>
-    <!-- checar checkboxes con UI -->
-    <div class="col-xs-3">
-      <label style="padding-left: 8px; margin-top: 10px;">Requiere grúa</label><h9 style="padding-left: 2px; font-size: 12px;">si</h9>
-      <label><%= f.check_box :grua, :class => 'ios-switch green' %><div><div></div></div></label><h9 style="padding-left: 3px; font-size: 12px;">no</h9>
-    </div>
-
-    <div class="col-xs-3">
-      <label style="padding-left: 0px; margin-top: 10px;">Siniestro por</label><h9 style="padding-left: 2px; font-size: 12px;">robo</h9>
-      <label><input type="checkbox" class="ios-switch green" /><div><div></div></div></label><h8 style="padding-left: 3px; font-size: 12px;">accidente</h8>
-    </div>
-
-
-  </div><!-- ./info secundaria -->
-
+  <div class="field">
+    <%= f.label :noSiniestro %><br>
+    <%= f.text_field :noSiniestro %>
+  </div>
+  <div class="field">
+    <%= f.label :noPoliza %><br>
+    <%= f.text_field :noPoliza %>
+  </div>
+  <div class="field">
+    <%= f.label :noInciso %><br>
+    <%= f.text_field :noInciso %>
+  </div>
+  <div class="field">
+    <%= f.label :noSerie %><br>
+    <%= f.text_field :noSerie %>
+  </div>
+  <div class="field">
+    <%= f.label :fechaSiniestro %><br>
+    <%= f.date_select :fechaSiniestro %>
+  </div>
+  <div class="field">
+    <%= f.label :nombreAsegurado %><br>
+    <%= f.text_field :nombreAsegurado %>
+  </div>
+  <div class="field">
+    <%= f.label :numeroTelefono %><br>
+    <%= f.text_field :numeroTelefono %>
+  </div>
+  <div class="field">
+    <%= f.label :emailAsegurado %><br>
+    <%= f.text_field :emailAsegurado %>
+  </div>
+  <div class="field">
+    <%= f.label :horarioContacto %><br>
+    <%= f.text_field :horarioContacto %>
+  </div>
+  <div class="field">
+    <%= f.label :porcentajeDeducible %><br>
+    <%= f.text_field :porcentajeDeducible %>
+  </div>
+  <div class="field">
+    <%= f.label :valorComercial %><br>
+    <%= f.text_field :valorComercial %>
+  </div>
+  <div class="field">
+    <%= f.label :montoDeducible %><br>
+    <%= f.text_field :montoDeducible %>
+  </div>
+  <div class="field">
+    <%= f.label :estatusCobranza %><br>
+    <%= f.text_field :estatusCobranza %>
+  </div>
+  <div class="field">
+    <%= f.label :marcaVehiculo %><br>
+    <%= f.text_field :marcaVehiculo %>
+  </div>
+  <div class="field">
+    <%= f.label :modeloVehiculo %><br>
+    <%= f.text_field :modeloVehiculo %>
+  </div>
+  <div class="field">
+    <%= f.label :colorVehiculo %><br>
+    <%= f.text_field :colorVehiculo %>
+  </div>
+  <div class="field">
+    <%= f.label :tipoVehiculo %><br>
+    <%= f.text_field :tipoVehiculo %>
+  </div>
+  <div class="field">
+    <%= f.label :anoVehiculo %><br>
+    <%= f.text_field :anoVehiculo %>
+  </div>
+  <div class="field">
+    <%= f.label :placasVehiculo %><br>
+    <%= f.text_field :placasVehiculo %>
+  </div>
+  <div class="field">
+    <%= f.label :agenteAjustador %><br>
+    <%= f.text_field :agenteAjustador %>
+  </div>
+  <div class="field">
+    <%= f.label :terceroAsegurado %><br>
+    <%= f.text_field :terceroAsegurado %>
+  </div>
+  <div class="field">
+    <%= f.label :condicionesEspeciales %><br>
+    <%= f.text_field :condicionesEspeciales %>
+  </div>
+  <div class="field">
+    <%= f.label :nombreTerceroAfectado %><br>
+    <%= f.text_field :nombreTerceroAfectado %>
+  </div>
+  <div class="field">
+    <%= f.label :noMotor %><br>
+    <%= f.text_field :noMotor %>
+  </div>
+  <div class="field">
+    <%= f.label :siniestro %><br>
+    <%= f.text_field :siniestro %>
+  </div>
+  <div class="field">
+    <%= f.label :equipoEspecialAmparado %><br>
+    <%= f.text_field :equipoEspecialAmparado %>
+  </div>
+  <div class="field">
+    <%= f.label :comentarioSecundario %><br>
+    <%= f.text_field :comentarioSecundario %>
+  </div>
+  <div class="field">
+    <%= f.label :requiereGrua %><br>
+    <%= f.text_field :requiereGrua %>
+  </div>
+  <div class="field">
+    <%= f.label :sigueAuto %><br>
+    <%= f.text_field :sigueAuto %>
+  </div>
+  <div class="field">
+    <%= f.label :terceroAsegurado %><br>
+    <%= f.text_field :terceroAsegurado %>
+  </div>
+  <div class="field">
+    <%= f.label :foto1 %><br>
+    <%= f.text_field :foto1 %>
+  </div>
+  <div class="field">
+    <%= f.label :foto2 %><br>
+    <%= f.text_field :foto2 %>
+  </div>
+  <div class="field">
+    <%= f.label :foto3 %><br>
+    <%= f.text_field :foto3 %>
+  </div>
+  <div class="field">
+    <%= f.label :comentarioGeneral %><br>
+    <%= f.text_area :comentarioGeneral %>
+  </div>
   <div class="actions">
-    <%= f.submit :class => 'goButton', :value => ''%>
+    <%= f.submit %>
   </div>
 <% end %>
