--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -3,37 +3,41 @@
 <table>
   <thead>
     <tr>
-      <th>Nombreajustador</th>
-      <th>Numeropoliza</th>
-      <th>Fechaexpedicion</th>
-      <th>Nombreasegurado</th>
-      <th>Telefonoasegurado</th>
-      <th>Estatuscobranza</th>
-      <th>Equipoamparado</th>
-      <th>Comentarioequipoamparado</th>
-      <th>Numerosiniestro</th>
-      <th>Numeroinciso</th>
+      <th>Companiaseguros</th>
+      <th>Nosiniestro</th>
+      <th>Nopoliza</th>
+      <th>Noinciso</th>
+      <th>Noserie</th>
       <th>Fechasiniestro</th>
+      <th>Nombreasegurado</th>
+      <th>Numerotelefono</th>
+      <th>Emailasegurado</th>
+      <th>Horariocontacto</th>
+      <th>Porcentajededucible</th>
+      <th>Valorcomercial</th>
+      <th>Montodeducible</th>
+      <th>Estatuscobranza</th>
+      <th>Marcavehiculo</th>
+      <th>Modelovehiculo</th>
+      <th>Colorvehiculo</th>
+      <th>Tipovehiculo</th>
+      <th>Anovehiculo</th>
+      <th>Placasvehiculo</th>
+      <th>Agenteajustador</th>
       <th>Terceroasegurado</th>
       <th>Condicionesespeciales</th>
-      <th>Nombretercero</th>
-      <th>Inventario</th>
-      <th>Numeroeconomico</th>
+      <th>Nombreterceroafectado</th>
+      <th>Nomotor</th>
       <th>Siniestro</th>
-      <th>Grua</th>
-      <th>Valorcomercial</th>
+      <th>Equipoespecialamparado</th>
+      <th>Comentariosecundario</th>
+      <th>Requieregrua</th>
       <th>Sigueauto</th>
-      <th>Deducible</th>
-      <th>Deduciblevalor</th>
-      <th>Aseguradotercero</th>
-      <th>Marca</th>
-      <th>Tipo</th>
-      <th>Modelo</th>
-      <th>Numeropuertas</th>
-      <th>Color</th>
-      <th>Numeroserie</th>
-      <th>Numeromotor</th>
-      <th>Placas</th>
+      <th>Terceroasegurado</th>
+      <th>Foto1</th>
+      <th>Foto2</th>
+      <th>Foto3</th>
+      <th>Comentariogeneral</th>
       <th></th>
       <th></th>
       <th></th>
@@ -43,37 +47,41 @@
   <tbody>
     <% @reports.each do |report| %>
       <tr>
-        <td><%= report.nombreAjustador %></td>
-        <td><%= report.numeroPoliza %></td>
-        <td><%= report.fechaExpedicion %></td>
-        <td><%= report.nombreAsegurado %></td>
-        <td><%= report.telefonoAsegurado %></td>
-        <td><%= report.estatusCobranza %></td>
-        <td><%= report.equipoAmparado %></td>
-        <td><%= report.comentarioEquipoAmparado %></td>
-        <td><%= report.numeroSiniestro %></td>
-        <td><%= report.numeroInciso %></td>
+        <td><%= report.companiaSeguros %></td>
+        <td><%= report.noSiniestro %></td>
+        <td><%= report.noPoliza %></td>
+        <td><%= report.noInciso %></td>
+        <td><%= report.noSerie %></td>
         <td><%= report.fechaSiniestro %></td>
+        <td><%= report.nombreAsegurado %></td>
+        <td><%= report.numeroTelefono %></td>
+        <td><%= report.emailAsegurado %></td>
+        <td><%= report.horarioContacto %></td>
+        <td><%= report.porcentajeDeducible %></td>
+        <td><%= report.valorComercial %></td>
+        <td><%= report.montoDeducible %></td>
+        <td><%= report.estatusCobranza %></td>
+        <td><%= report.marcaVehiculo %></td>
+        <td><%= report.modeloVehiculo %></td>
+        <td><%= report.colorVehiculo %></td>
+        <td><%= report.tipoVehiculo %></td>
+        <td><%= report.anoVehiculo %></td>
+        <td><%= report.placasVehiculo %></td>
+        <td><%= report.agenteAjustador %></td>
         <td><%= report.terceroAsegurado %></td>
         <td><%= report.condicionesEspeciales %></td>
-        <td><%= report.nombreTercero %></td>
-        <td><%= report.inventario %></td>
-        <td><%= report.numeroEconomico %></td>
+        <td><%= report.nombreTerceroAfectado %></td>
+        <td><%= report.noMotor %></td>
         <td><%= report.siniestro %></td>
-        <td><%= report.grua %></td>
-        <td><%= report.valorComercial %></td>
+        <td><%= report.equipoEspecialAmparado %></td>
+        <td><%= report.comentarioSecundario %></td>
+        <td><%= report.requiereGrua %></td>
         <td><%= report.sigueAuto %></td>
-        <td><%= report.deducible %></td>
-        <td><%= report.deducibleValor %></td>
-        <td><%= report.aseguradoTercero %></td>
-        <td><%= report.marca %></td>
-        <td><%= report.tipo %></td>
-        <td><%= report.modelo %></td>
-        <td><%= report.numeroPuertas %></td>
-        <td><%= report.color %></td>
-        <td><%= report.numeroSerie %></td>
-        <td><%= report.numeroMotor %></td>
-        <td><%= report.placas %></td>
+        <td><%= report.terceroAsegurado %></td>
+        <td><%= report.foto1 %></td>
+        <td><%= report.foto2 %></td>
+        <td><%= report.foto3 %></td>
+        <td><%= report.comentarioGeneral %></td>
         <td><%= link_to 'Show', report %></td>
         <td><%= link_to 'Edit', edit_report_path(report) %></td>
         <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
