--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
   <%= stylesheet_link_tag 'estilo2.css' %>
   <%= stylesheet_link_tag 'datepicker.css' %>
   <%= stylesheet_link_tag 'bootstrap.min.css' %>
+  <%= stylesheet_link_tag 'jasny-bootstrap.min.css' %>
+
 
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -28,10 +30,6 @@
 
 <%= yield %>
 
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="/assets/bootstrap.min.js"></script>
-<script src="/assets/bootstrap-datepicker.js"></script>
-<script src="/assets/fecha.js"></script> -->
 
 </body>
 </html>
