--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,4 +1,11 @@
-<%= form_for(@report) do |f| %>
+<div class="container sourcesans" >
+  <div class="row bprinc" style="height:100px">
+    <div class= "col-xs-4 col-sm-4 col-md-3" ><img src="img/imgLogos-01.svg" style="padding-top:10px; margin-left:20px" alt="Syrat" class="img-responsive"></div>
+    <div class= "col-xs-2 col-sm-1 col-md-1  col-xs-offset-6 col-sm-offset-6 col-md-offset-7"><img src="img/imgSLogo.svg" style="margin-top:20px; margin-bottom:10px; margin-right:50px" alt="IMEX" class="img-responsive"></div>
+  </div>
+
+<%= form_for @report, :html => {:class => 'form textUppercase'} do |f|  %>
+
   <% if @report.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@report.errors.count, "error") %> prohibited this report from being saved:</h2>
@@ -11,145 +18,158 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :companiaSeguros %><br>
-    <%= f.text_field :companiaSeguros %>
+
+  <div class="row grsec form-group" >
+    <h1 class="blueTitle" >INFORMACIÓN PRIMARIA DEL SINIESTRO</h1>
+      <div class="col-xs-2">
+        <select class="formStyle" name="companiaSeguros">
+<!--           <%= f.text_field :companiaSeguros %> -->
+          <option>AXA</option>
+          <option>Qualitas</option>
+        </select>
+        <label style="padding-left: 2px;">Compañía de Seguros</label>
+      </div>
+
+  <div class="col-xs-2">
+    <%= f.label :noSiniestro , :class => 'formStyle' %><br>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :noSiniestro %><br>
+
+  <div class="col-xs-2">
+    <%= f.label :noSiniestro , :class => 'formStyle' %><br>
     <%= f.text_field :noSiniestro %>
   </div>
-  <div class="field">
-    <%= f.label :noPoliza %><br>
+  <div class="col-xs-2">
     <%= f.text_field :noPoliza %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :noInciso %><br>
+  <div class="col-xs-2">
     <%= f.text_field :noInciso %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :noSerie %><br>
+  <div class="col-xs-2">
     <%= f.text_field :noSerie %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :fechaSiniestro %><br>
+  <div class="col-xs-2">
     <%= f.date_select :fechaSiniestro %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :nombreAsegurado %><br>
+  <div class="col-xs-2">
     <%= f.text_field :nombreAsegurado %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :numeroTelefono %><br>
+  <div class="col-xs-2">
     <%= f.text_field :numeroTelefono %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :emailAsegurado %><br>
+  <div class="col-xs-2">
     <%= f.text_field :emailAsegurado %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :horarioContacto %><br>
+  <div class="col-xs-2">
     <%= f.text_field :horarioContacto %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :porcentajeDeducible %><br>
+  <div class="col-xs-2">
     <%= f.text_field :porcentajeDeducible %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :valorComercial %><br>
+  <div class="col-xs-2">
     <%= f.text_field :valorComercial %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :montoDeducible %><br>
+  <div class="col-xs-2">
     <%= f.text_field :montoDeducible %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :estatusCobranza %><br>
+  <div class="col-xs-2">
     <%= f.text_field :estatusCobranza %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :marcaVehiculo %><br>
+  <div class="col-xs-2">
     <%= f.text_field :marcaVehiculo %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :modeloVehiculo %><br>
+  <div class="col-xs-2">
     <%= f.text_field :modeloVehiculo %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :colorVehiculo %><br>
+  <div class="col-xs-2">
     <%= f.text_field :colorVehiculo %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :tipoVehiculo %><br>
+  <div class="col-xs-2">
     <%= f.text_field :tipoVehiculo %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :anoVehiculo %><br>
+  <div class="col-xs-2">
     <%= f.text_field :anoVehiculo %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :placasVehiculo %><br>
+  <div class="col-xs-2">
     <%= f.text_field :placasVehiculo %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :agenteAjustador %><br>
+  <div class="col-xs-2">
     <%= f.text_field :agenteAjustador %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :terceroAsegurado %><br>
+  <div class="col-xs-2">
     <%= f.text_field :terceroAsegurado %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :condicionesEspeciales %><br>
+  <div class="col-xs-2">
     <%= f.text_field :condicionesEspeciales %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :nombreTerceroAfectado %><br>
+  <div class="col-xs-2">
     <%= f.text_field :nombreTerceroAfectado %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :noMotor %><br>
+  <div class="col-xs-2">
     <%= f.text_field :noMotor %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :siniestro %><br>
+  <div class="col-xs-2">
     <%= f.text_field :siniestro %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :equipoEspecialAmparado %><br>
+  <div class="col-xs-2">
     <%= f.text_field :equipoEspecialAmparado %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :comentarioSecundario %><br>
+  <div class="col-xs-2">
     <%= f.text_field :comentarioSecundario %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :requiereGrua %><br>
+  <div class="col-xs-2">
     <%= f.text_field :requiereGrua %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :sigueAuto %><br>
+  <div class="col-xs-2">
     <%= f.text_field :sigueAuto %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :terceroAsegurado %><br>
+  <div class="col-xs-2">
     <%= f.text_field :terceroAsegurado %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :foto1 %><br>
+  <div class="col-xs-2">
     <%= f.text_field :foto1 %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :foto2 %><br>
+  <div class="col-xs-2">
     <%= f.text_field :foto2 %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :foto3 %><br>
+  <div class="col-xs-2">
     <%= f.text_field :foto3 %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
-  <div class="field">
-    <%= f.label :comentarioGeneral %><br>
+  <div class="col-xs-2">
     <%= f.text_area :comentarioGeneral %>
+    <label style="padding-left: 2px;">NO. DE SINIESTRO</label>
   </div>
   <div class="actions">
     <%= f.submit %>
